--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,3 +4,5 @@
 </p>
 
 <%= link_to "Home", articles_path %>
+<%= link_to "Edit", edit_article_path(@article) %>
+<%= link_to "Delete", article_path(@article), method: :delete, data: {confirm: "Really delete the article?"} %>
