--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,6 +3,9 @@
 	<%= @article.body %>
 </p>
 
+<h3>Comments</h3>
+<%= render partial: 'comment', collection: @article.comments.reverse %>
+
 <%= link_to "Home", articles_path %>
 <%= link_to "Edit", edit_article_path(@article) %>
 <%= link_to "Delete", article_path(@article), method: :delete, data: {confirm: "Really delete the article?"} %>
