--- a/app/views/articles/_comment.html.erb
+++ b/app/views/articles/_comment.html.erb
@@ -1,4 +1,4 @@
 <div>
-	<h6>Posted by <%= comment.author_name %> on <%= comment.created_at.strftime("%d/%m/%Y")%></h6>
+	<h6>Posted <%= distance_of_time_in_words(comment.article.created_at, comment.created_at) %> later</h6>
 	<p class="comment"><%= comment.body %></p>
 </div>
