--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,7 +3,7 @@
 	<%= @article.body %>
 </p>
 
-<h3>Comments</h3>
+<h3>Comments (<%= @article.comments.count %>)</h3>
 <%= render partial: 'articles/comment', collection: @article.comments.reverse %>
 
 <!-- Form (partial) for adding a comment -->
