--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -4,11 +4,11 @@
 so we need to update the routes.rb and nest both resources!-->
 <%= form_for [ @article, @comment ] do |f| %>
   <p>
-    <%= f.label :author_name %><br/>
+    <%= f.label :author_name, "Your name" %><br/>
     <%= f.text_field :author_name %>
   </p>
   <p>
-    <%= f.label :body %><br/>
+    <%= f.label :body, "Your comment" %><br/>
     <%= f.text_area :body %>
   </p>
   <p>
