Add paperclip gem and implementation

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,7 +1,8 @@
 <h1><%= @article.title %></h1>
-<p>
-	<%= @article.body %>
-</p>
+<p><%= @article.body %></p>
+<% if @article.image.exists? %>
+	<p><%= image_tag @article.image.url(:medium) %></p>
+<% end %>
 <p>
   Tags:
   <% @article.tags.each do |tag| %>
