--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @article do |f| %>
+<%= form_for(@article, html: {multipart: true}) do |f| %>
 	<!-- Handling errors -->
 	<ul>
 		<% @article.errors.full_messages.each do |msg| %>
@@ -16,6 +16,13 @@
 	<p>
 		<%= f.label :tag_list %><br>
 		<%= f.text_field :tag_list %>
+	</p>
+	<p>
+		<% if @article.image.exists? %>
+			<%= image_tag @article.image.url(:thumb) %><br>
+		<% end %>
+	  <%= f.label :image, "Attach an Image" %><br>
+	  <%= f.file_field :image %>
 	</p>
 	<p>
 		<%= f.submit %>
