--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -10,12 +10,13 @@
   <% end %>
 </p>
 
+<%= link_to "Edit", edit_article_path(@article) %>
+<%= link_to "Delete", article_path(@article), method: :delete, data: {confirm: "Really delete the article?"} %>
+
 <h3>Comments (<%= @article.comments.count %>)</h3>
 <%= render partial: 'articles/comment', collection: @article.comments.reverse %>
 
 <!-- Form (partial) for adding a comment -->
 <%= render partial: 'comments/form' %>
 
-<%= link_to "Home", articles_path %>
-<%= link_to "Edit", edit_article_path(@article) %>
-<%= link_to "Delete", article_path(@article), method: :delete, data: {confirm: "Really delete the article?"} %>
+<%= link_to "Home", articles_path, class: "new_article" %>
