--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,22 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<p class="flash"><%= flash.notice %></p>
-<%= yield %>
-
+  <p class="flash">
+    <%= flash.notice %>
+  </p>
+  <div id="container">
+    <div id="content">
+      <%= yield %>
+      <hr>
+      <h6>
+        <% if author_signed_in? %>
+          <p>Logged in as <%= current_author.email %></p>
+          <%= link_to "Log out", destroy_author_session_path, method: :delete %>
+        <% else %>
+          <%= link_to "Log in", new_author_session_path %>
+        <% end %>
+      </h6>
+    </div>
+  </div>
 </body>
 </html>
