--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
         <% else %>
           <%= link_to "Log in", new_author_session_path %>
         <% end %>
+        <%= link_to "Top 3", popular_articles_path %>
       </h6>
     </div>
   </div>
