--- a/app/views/articles/_list.html.erb
+++ b/app/views/articles/_list.html.erb
@@ -1,7 +1,4 @@
-<ul id="articles">
-	<% @articles.each do |a| %>
-		<li>
-			<%= link_to a.title, article_path(a), class: 'article_title' %>
-		</li>
-	<% end %>
-</ul>
+<% @articles.each do |a| %>
+	<h2><%= link_to a.title, article_path(a) %></h2>
+	<hr>
+<% end %>
