--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,29 +6,66 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   <%= auto_discovery_link_tag :rss, articles_url(:format => :rss) %>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-	<% if flash.alert %>
-    <p class="flash"><%= flash.alert %></p>
-  <% end %>
-  <% if flash.notice %>
-    <p class="flash"><%= flash.notice %></p>
-  <% end %>
-  <div id="container">
-    <div id="content">
-      <%= yield %>
-      <hr>
-      <h6>
-        <% if author_signed_in? %>
+  <div class="container-fluid">
+    <div class="row content">
+      <div class="col-sm-3 sidenav">
+        <h4>Blogger by omajul85</h4>
+        <ul class="nav nav-pills nav-stacked">
+          <li><%= link_to "Home", articles_path %></li>
+          <li><%= link_to "Top 3", popular_articles_path %></li>
+          <li><a href="#section3">Tags</a></li>
+        </ul><br>
+        <div class="input-group">
+          <input type="text" class="form-control" placeholder="Search Blog..">
+          <span class="input-group-btn">
+            <button class="btn btn-default" type="button">
+              <span class="glyphicon glyphicon-search"></span>
+            </button>
+          </span>
+        </div>
+      </div>
+
+      <div class="col-sm-9">
+        <header class="container-fluid">
+          <% if author_signed_in? %>
+            <p>Logged in as <%= current_author.email %></p>
+            <%= link_to "Sign out", destroy_author_session_path, method: :delete %>
+          <% else %>
+            <%= link_to "Sign up", new_author_registration_path %>
+            <%= link_to "Sign in", new_author_session_path %>
+          <% end %>
+          <%= link_to "Top 3", popular_articles_path %>
+        </header>
+      </div>
+
+      <div class="col-sm-9">
+        <%= yield %>
+      </div>
+
+      <div class="col-sm-9">
+        <h6>
+          <% if author_signed_in? %>
           <p>Logged in as <%= current_author.email %></p>
           <%= link_to "Sign out", destroy_author_session_path, method: :delete %>
-        <% else %>
+          <% else %>
           <%= link_to "Sign up", new_author_registration_path %>
           <%= link_to "Sign in", new_author_session_path %>
-        <% end %>
-        <%= link_to "Top 3", popular_articles_path %>
-      </h6>
+          <% end %>
+          <%= link_to "Top 3", popular_articles_path %>
+        </h6>
+      </div>
     </div>
   </div>
+
+  <footer class="container-fluid">
+    <p>Footer Text</p>
+  </footer>
 </body>
 </html>
