--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
         <ul class="nav nav-pills nav-stacked">
           <li><%= link_to "New Article", new_article_path %></li>
           <li><%= link_to "Top 3", popular_articles_path %></li>
-          <li><a href="#section3">Tags</a></li>
+          <li><%= link_to "Tags", tags_path %></li>
         </ul><br>
         <div class="input-group">
           <input type="text" class="form-control" placeholder="Search Blog..">
