--- a/app/views/articles/_comment.html.erb
+++ b/app/views/articles/_comment.html.erb
@@ -1,4 +1,5 @@
 <div>
-	<h6>Posted <%= distance_of_time_in_words(comment.article.created_at, comment.created_at) %> later</h6>
-	<p class="comment"><%= comment.body %></p>
+	<hr>
+	<h5><strong>Posted <%= distance_of_time_in_words(comment.article.created_at, comment.created_at) %> later by <%= comment.author_name %></strong></h5>
+	<p style="margin-left: 20px;"><%= comment.body %></p>
 </div>
