--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -7,15 +7,15 @@
 	</ul>
 	<p>
 		<%= f.label :title %><br>
-		<%= f.text_field :title %>
+		<%= f.text_field :title, class: "input-block-level" %>
 	</p>
 	<p>
 		<%= f.label :body %><br>
-		<%= f.text_area :body %>
+		<%= f.text_area :body, class: "input-block-level", rows: "10" %>
 	</p>
 	<p>
 		<%= f.label :tag_list %><br>
-		<%= f.text_field :tag_list %>
+		<%= f.text_field :tag_list, class: "input-block-level" %>
 	</p>
 	<p>
 		<% if @article.image.exists? %>
@@ -24,6 +24,7 @@
 	  <%= f.label :image, "Attach an Image" %><br>
 	  <%= f.file_field :image %>
 	</p>
+	<br>
 	<p>
 		<%= f.submit %>
 	</p>
