--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,15 +1,15 @@
-<h3>Post a Comment</h3>
+<h3>Leave a Comment</h3>
 
 <!-- The form_for helper is trying to build the form so that it submits to article_comments_path 
 so we need to update the routes.rb and nest both resources!-->
 <%= form_for [ @article, @comment ] do |f| %>
   <p>
     <%= f.label :author_name, "Your name" %><br/>
-    <%= f.text_field :author_name %>
+    <%= f.text_field :author_name, class: "input-block-level" %>
   </p>
   <p>
     <%= f.label :body, "Your comment" %><br/>
-    <%= f.text_area :body %>
+    <%= f.text_area :body, class: "input-block-level", rows: "5" %>
   </p>
   <p>
     <%= f.submit 'Post' %>
