--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -5,9 +5,9 @@
 
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+    <%= f.email_field :email, autofocus: true, class: "input-block-level" %>
   </div>
-
+  <br>
   <div class="actions">
     <%= f.submit "Send me reset password instructions" %>
   </div>
